--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,1 +1,5 @@
---- {}
+---
+golang/go1.3.1.linux-amd64.tar.gz:
+  object_id: 640832cf-83d3-43e2-816e-13705d8bfb36
+  sha: 3af011cc19b21c7180f2604fd85fbc4ddde97143
+  size: 51930765
